--- a/localapplication.html
+++ b/localapplication.html
@@ -801,7 +801,7 @@
         </div>
       </div>
 
-      <span class="description-header">Submit</span>
+      <span class="description-header">提交</span>
       <div class="module-form layout-form-columnized">
         <div class="column">
           <span class="from-description-header">
