--- a/localapplication.html
+++ b/localapplication.html
@@ -445,8 +445,7 @@
           <span class="from-description-header-ness">
             必填問題，請上傳<strong>一份合併好的 PDF 檔案</strong
             >，上限為<strong>最多 10 頁 A4、檔案大小不超過 8MB</strong
-            >。請勿上傳多個 PDF，如有多頁內容，請合併成<u>一份 PDF 上傳</u
-            >。 </span
+            >。請勿上傳多個 PDF，如有多頁內容，請合併成一份 PDF 上傳。 </span
           ><br />
           <div class="upload-container">
             <input type="file" id="fileInput" name="file" />
@@ -478,8 +477,7 @@
           <span class="from-description-header-ness">
             必填問題，請上傳<strong>一份合併好的 PDF 檔案</strong
             >，上限為<strong>最多 10 頁 A4、檔案大小不超過 8MB</strong
-            >。請勿上傳多個 PDF，如有多頁內容，請合併成<u>一份 PDF 上傳</u
-            >。 </span
+            >。請勿上傳多個 PDF，如有多頁內容，請合併成一份 PDF 上傳。 </span
           ><br />
           <div class="upload-container">
             <input type="file" id="fileInput2" name="file" />
@@ -801,7 +799,7 @@
         </div>
       </div>
 
-      <span class="description-header">提交</span>
+      <span class="description-header">Submit</span>
       <div class="module-form layout-form-columnized">
         <div class="column">
           <span class="from-description-header">
@@ -816,7 +814,7 @@
             id="submitButton"
             value="submit"
           >
-            Submit
+            提交
           </button>
         </div>
       </div>
