--- a/localapplication.html
+++ b/localapplication.html
@@ -803,7 +803,7 @@
       <div class="module-form layout-form-columnized">
         <div class="column">
           <span class="from-description-header">
-            <strong>確認按鈕前，請再次檢查您輸入的回答</strong
+            <strong>按下提交按鈕前，請再次檢查您輸入的回答</strong
             >，表單提交後將無法再次修改，如需修改請再次提交表單。我們收到您的申請後，您將收到一封自動確認電子郵件。如果您沒有收到電子郵件，請檢查您的垃圾信箱。
           </span>
         </div>
