password return cause not my problem

--- a/localapplication.html
+++ b/localapplication.html
@@ -693,16 +693,14 @@
           <div style="position: relative">
             <input
               id="password"
-              type="text"
+              type="password"
               autocomplete="off"
               class="form-input"
               name="entry.174970451"
               placeholder="Password"
               maxlength="500"
               required
-              spellcheck="false"
               style="padding-right: 30px"
-              aria-hidden="true"
             />
             <button
               type="button"
