--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -896,17 +896,14 @@
           <div style="position: relative">
             <input
               id="password"
-              type="text"
-              inputmode="none"
+              type="password"
+              autocomplete="new-password"
+              class="form-input"
               name="entry.1848520839"
               placeholder="Password"
               maxlength="500"
               required
-              class="form-input"
               style="padding-right: 60px"
-              autocomplete="off"
-              spellcheck="false"
-              aria-hidden="true"
             />
             <button
               type="button"
