content change due to mobile uglyness

--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -53,7 +53,7 @@
         Oversea Application<br />TAIPEI ART BOOK FAIR OPEN CALL
       </div>
       <div style="font-size: 0.7rem; text-align: center; font-weight: 600">
-        For local application, please proceed to →
+        For local application →
         <a href="localapplication.html">本地申請</a>
       </div>
       <br /><br />
