--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -63,8 +63,8 @@
         <div class="column">
           <span class="from-header">Exhibitor's Name</span><br />
           <span class="smalltext"
-            >Your inputted content will be officially displayed on the website,
-            the search tag and the catalog.</span
+            >The information you provide will be officially displayed on the
+            website, in search tags, and in the catalog.</span
           >
         </div>
         <div class="column layout-form-column-grid-1">
