--- a/index-logingtryout.html
+++ b/index-logingtryout.html
@@ -449,7 +449,9 @@ font in use: Poppins, PicNic, and Inclusive Sans -->
         <a href="#en" class="application-button-lang" rel="history">English</a>
       </div>
     </div>
-    <div class="login-btn">攤主登入｜Exhibitor Login</div>
+    <a href="login.html"
+      ><div class="login-btn">攤主登入｜Exhibitor Login</div></a
+    >
 
     <script src="infolog.js"></script>
     <script src="script.js"></script>
