--- a/login.html
+++ b/login.html
@@ -159,6 +159,22 @@
         );
         margin-bottom: 1rem;
       }
+      .back {
+        font-family: "Inclusive Sans", sans-serif;
+        width: 100%;
+        overflow: hidden;
+        background-color: seagreen;
+        /* background-color: rgb(214, 214, 192); */
+        /* border: 1px solid plum; */
+        white-space: nowrap;
+        position: fixed;
+        color: plum;
+        bottom: 0px;
+        left: 0px;
+        text-align: center;
+        font-weight: 500;
+        cursor: pointer;
+      }
     </style>
   </head>
   <body>
@@ -183,8 +199,8 @@
           <a href="/forgot-password" class="fp"> 忘記密碼？Forgot Password? </a>
         </div>
       </form>
-
       <button type="submit">登入 Log In</button>
     </div>
+    <a href="index.html"><div class="back">回主頁 Back</div></a>
   </body>
 </html>
