forgot password page

--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Login - 草率季Taipei Art Book Fair</title>
+    <title>Forgot Password - 草率季Taipei Art Book Fair</title>
     <!-- <link rel="stylesheet" href="style.css" /> -->
     <link rel="stylesheet" href="font.css" />
     <link rel="shortcut icon" href="image/icon-1.ico" />
@@ -185,24 +185,86 @@
       id="sasa"
       src="image/bgimg4.jpg"
     />
-    <h2>Exhibitor Login | 攤主登入</h2>
-    <div class="form">
-      <form action="/login" method="POST">
-        <input type="text" name="Email" placeholder="Email" required /><br />
+
+    <!-- 步驟1：輸入電子郵件和驗證碼 -->
+    <div class="form" id="step-1">
+      <form action="/send-reset-code" method="POST">
         <input
-          type="password"
-          name="password"
-          placeholder="Password"
+          type="text"
+          name="email"
+          placeholder="輸入你的信箱 Enter your email"
           required
-        />
-        <div>
-          <a href="forgotpassword.html" class="fp">
-            忘記密碼？Forgot Password?
-          </a>
-        </div>
+        /><br />
+        <button id="send-verification-btn" type="button">
+          發送驗證碼 Send Verification Code</button
+        ><br />
+
+        <!-- 驗證碼輸入框，初始隱藏 -->
+        <input
+          type="text"
+          id="verification-code"
+          name="verificationCode"
+          placeholder="輸入驗證碼 Enter verification code"
+          style="display: none"
+        /><br />
+
+        <button id="verify-btn" type="button" style="display: none">
+          驗證驗證碼 Verify Code
+        </button>
       </form>
-      <button type="submit">登入 Log In</button>
     </div>
+
     <a href="index-logingtryout.html"><div class="back">回主頁 Back</div></a>
+
+    <script>
+      // 發送驗證碼邏輯
+      const sendVerificationButton = document.getElementById(
+        "send-verification-btn"
+      );
+      const verificationCodeInput =
+        document.getElementById("verification-code");
+      const verifyButton = document.getElementById("verify-btn");
+
+      sendVerificationButton.addEventListener("click", function (event) {
+        event.preventDefault(); // 防止表單提交
+
+        // 這裡可以進行發送驗證碼的 AJAX 請求，並成功後顯示驗證碼輸入框
+        verificationCodeInput.style.display = "inline-block"; // 顯示驗證碼輸入框
+        verifyButton.style.display = "inline-block"; // 顯示驗證按鈕
+      });
+
+      // 驗證碼驗證邏輯
+      verifyButton.addEventListener("click", function (event) {
+        event.preventDefault();
+
+        // 假設驗證碼輸入成功後，顯示新密碼設置表單
+        const enteredCode = verificationCodeInput.value;
+
+        // 可以在這裡加上實際的驗證碼檢查邏輯
+        if (enteredCode === "123456") {
+          // 假設 "123456" 是發送的驗證碼
+          // 步驟2：創建新的 div 並顯示
+          const step2Div = document.createElement("div");
+          step2Div.className = "form"; // 設定與第一步相同的類別
+
+          // 創建新密碼輸入表單
+          step2Div.innerHTML = `
+            <form action="/reset-password" method="POST">
+              <input type="password" name="newPassword" placeholder="設置新密碼 Set new password" required /><br />
+              <input type="password" name="confirmPassword" placeholder="確認新密碼 Confirm new password" required /><br />
+              <button type="submit">設置新密碼 Set New Password</button>
+            </form>
+          `;
+
+          // 把新的 div 添加到頁面
+          document.body.appendChild(step2Div); // 可將其放到特定位置
+
+          // 隱藏步驟1
+          document.getElementById("step-1").style.display = "none";
+        } else {
+          alert("驗證碼錯誤，請重新輸入。");
+        }
+      });
+    </script>
   </body>
 </html>
