--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -874,13 +874,21 @@
         <div class="column layout-form-column-grid-1">
           <span class="from-description-header-ness">Required Question</span>
           <input
+            type="email"
             autocomplete="email"
             class="form-input"
             name="entry.529156755"
+            id="email-input"
             placeholder="Email"
             maxlength="500"
             required
           />
+          <div
+            id="email-error"
+            style="color: plum; display: none; font-size: 13px"
+          >
+            Please enter a valid email address, such as: example@gmail.com
+          </div>
         </div>
 
         <!--Password-->
