--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -14,6 +14,8 @@
       href="jquery-ui-1.14.1/themes/smoothness/jquery-ui.css"
     />
     <script src="jquery-ui-1.14.1/jquery-ui.js"></script>
+    <!-- 圖靈測驗 -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
     <!-- Google tag (gtag.js) -->
     <script
@@ -1050,6 +1052,10 @@
           </span>
         </div>
         <div class="column">
+          <div
+            class="g-recaptcha"
+            data-sitekey="6Ld5yzUrAAAAANxGXgmtKuR3reXVdstBSKRu-iOO"
+          ></div>
           <button
             type="submit"
             class="button-from-submit"
