zh-tw rechaptcha

--- a/localapplication.html
+++ b/localapplication.html
@@ -16,7 +16,11 @@
     <script src="jquery-ui-1.14.1/jquery-ui.js"></script>
     <script src="main.js"></script>
     <!-- 圖靈測驗 -->
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script
+      src="https://www.google.com/recaptcha/api.js?hl=zh-TW"
+      async
+      defer
+    ></script>
     <!-- Google tag (gtag.js) -->
     <script
       async
