forgot password update

--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -55,77 +55,113 @@
         background-color: #f2f2f2;
       }
 
-      h2 {
-        /* font-family: "PicNic"; */
-        margin: 0px 0px 0px 0px;
-        font-size: 1rem;
-        color: black;
-        width: 100%;
-        font-weight: 400;
-        padding: 5px 5px 5px 10px;
-        /* is he gay or european? So many shades of greeeeyyy */
-        background: linear-gradient(
-          180deg,
-          rgba(0, 0, 0, 1) 0%,
-          rgba(255, 255, 255, 1) 7%,
-          rgba(222, 222, 222, 1) 10%,
-          rgba(255, 255, 255, 1) 25%,
-          rgba(255, 255, 255, 1) 50%,
-          rgba(227, 227, 227, 1) 53%,
-          rgb(154, 154, 154) 65%,
-          rgba(255, 255, 255, 1) 82%,
-          rgba(174, 174, 174, 1) 93%,
-          rgba(0, 0, 0, 1) 100%
-        );
-        /* text-shadow: 3px 2px 0 ghostwhite, -1px -1px 0 ghostwhite; */
-      }
-      form {
-        padding: 15px 10px 5px 10px;
-        background: linear-gradient(
-          180deg,
-          rgba(0, 0, 0, 1) 0%,
-          rgba(255, 255, 255, 1) 7%,
-          rgba(222, 222, 222, 1) 18%,
-          rgba(255, 255, 255, 1) 21%,
-          rgba(255, 255, 255, 1) 46%,
-          rgba(227, 227, 227, 1) 53%,
-          rgba(237, 235, 235, 1) 79%,
-          rgba(255, 255, 255, 1) 82%,
-          rgba(174, 174, 174, 1) 90%,
-          rgba(0, 0, 0, 1) 100%
-        );
-        width: 100vw;
+      .login-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 50vh;
+        padding: 0 10px;
       }
 
-      input[type="text"],
-      input[type="password"] {
+      h2 {
+        font-size: 1rem;
+        font-weight: normal;
+        text-transform: uppercase;
+        margin-bottom: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
+        color: black;
+        background-color: ghostwhite;
+        border: 1px solid black;
+        text-align: left;
+      }
+
+      .login-form {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        max-width: 380px;
+        padding: 8px;
+        box-sizing: border-box;
+        border: 1px solid black;
+        background-color: ghostwhite;
+      }
+
+      .input-box {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 8px;
+        padding: 4px;
+        border: 1px solid #000;
+      }
+
+      .input-box label {
+        font-size: 12px;
+        color: black;
+        margin-bottom: 2px;
+      }
+
+      .input-box input {
+        padding: 6px;
+        font-size: 12px;
+        border: 1px solid #000;
+        /* background: linear-gradient(
+          100deg,
+          rgb(78, 78, 78) 0%,
+          rgba(255, 255, 255, 1) 2%,
+          rgba(222, 222, 222, 1) 10%,
+          rgba(255, 255, 255, 1) 21%,
+          rgba(255, 255, 255, 1) 38%,
+          rgba(227, 227, 227, 1) 70%,
+          rgba(237, 235, 235, 1) 79%,
+          rgba(255, 255, 255, 1) 82%,
+          rgba(174, 174, 174, 1) 99%,
+          rgb(61, 61, 61) 100%
+        ); */
+      }
+
+      .input-box input:focus {
+        background-color: olive;
+        outline: none;
+      }
+
+      .sub-actions {
+        display: flex;
+        justify-content: flex-end;
+        margin-top: 4px;
+        padding-right: 6px;
+      }
+
+      .fp {
+        text-decoration: underline;
+        font-size: 11px;
+        color: black;
+      }
+
+      .submit-box {
+        display: flex;
         justify-content: center;
-        align-items: center;
-        width: 97vw;
-        padding: 0.4rem;
-        font-size: 0.9rem;
-        background-color: white;
-        height: 1rem;
-        margin: 0px 0px 10px 0px;
+        margin-top: 10px;
       }
 
       button {
-        font-family: "Inclusive Sans", sans-serif;
-        overflow: hidden;
+        padding: 8px;
         background-color: black;
-        white-space: nowrap;
         color: white;
-        text-align: left;
-        padding-right: 10px;
-        padding-left: 10px;
-        font-weight: 500;
+        border: none;
+        width: 100%;
+        text-align: center;
         cursor: pointer;
-        font-size: 1rem;
+        letter-spacing: 1px;
+        font-size: 0.9rem;
       }
 
       button:hover {
-        background-color: rgb(68, 68, 68);
+        color: palegreen;
+        background-color: olive;
       }
+
       .bgimg {
         filter: saturate(500) hue-rotate(185deg) contrast(200%) brightness(90%)
           sepia(25%);
@@ -144,8 +180,8 @@
         text-decoration: underline;
         color: grey;
         display: inline-block;
-        background: linear-gradient(
-          90deg,
+        /* background: linear-gradient(
+          0deg,
           rgb(78, 78, 78) 0%,
           rgba(255, 255, 255, 1) 2%,
           rgba(222, 222, 222, 1) 18%,
@@ -156,24 +192,27 @@
           rgba(255, 255, 255, 1) 82%,
           rgba(174, 174, 174, 1) 99%,
           rgb(61, 61, 61) 100%
-        );
+        ); */
         margin-bottom: 1rem;
       }
       .back {
+        font-size: 0.9rem;
         font-family: "Inclusive Sans", sans-serif;
-        width: 100%;
         overflow: hidden;
-        background-color: black;
-        /* background-color: rgb(214, 214, 192); */
-        /* border: 1px solid plum; */
+        color: black;
+        background-color: white;
         white-space: nowrap;
         position: fixed;
-        color: white;
         bottom: 0px;
         left: 0px;
+        padding: 5px;
         text-align: center;
         font-weight: 500;
         cursor: pointer;
+      }
+      ::selection {
+        color: palegreen;
+        background-color: olive;
       }
     </style>
   </head>
@@ -186,83 +225,86 @@
       src="image/bgimg4.jpg"
     />
 
-    <!-- 步驟1：輸入電子郵件和驗證碼 -->
-    <div class="form" id="step-1">
-      <form action="/send-reset-code" method="POST">
-        <input
-          type="text"
-          name="email"
-          placeholder="輸入你的信箱 Enter your email"
-          required
-        /><br />
-        <button id="send-verification-btn" type="button">
-          發送驗證碼 Send Verification Code</button
-        ><br />
+    <div class="login-wrapper">
+      <h2>忘記密碼 Forgot Password</h2>
+      <div class="login-form" id="step-1">
+        <form action="/send-reset-code" method="POST">
+          <div class="input-box">
+            <label for="email">輸入你的信箱 Enter your email</label>
+            <input
+              type="text"
+              name="email"
+              placeholder="your@email.com"
+              required
+            />
+          </div>
 
-        <!-- 驗證碼輸入框，初始隱藏 -->
-        <input
-          type="text"
-          id="verification-code"
-          name="verificationCode"
-          placeholder="輸入驗證碼 Enter verification code"
-          style="display: none"
-        /><br />
+          <div class="submit-box">
+            <button id="send-verification-btn" type="button">
+              發送驗證碼 Send Verification Code
+            </button>
+          </div>
 
-        <button id="verify-btn" type="button" style="display: none">
-          驗證驗證碼 Verify Code
-        </button>
-      </form>
+          <div class="input-box" id="code-box" style="display: none">
+            <label for="verificationCode"
+              >輸入驗證碼 Enter verification code</label
+            >
+            <input type="text" id="verification-code" name="verificationCode" />
+          </div>
+
+          <div class="submit-box" id="verify-box" style="display: none">
+            <button id="verify-btn" type="button">
+              驗證驗證碼 Verify Code
+            </button>
+          </div>
+        </form>
+      </div>
     </div>
 
     <a href="index-logingtryout.html"><div class="back">回主頁 Back</div></a>
 
     <script>
-      // 發送驗證碼邏輯
       const sendVerificationButton = document.getElementById(
         "send-verification-btn"
       );
       const verificationCodeInput =
         document.getElementById("verification-code");
+      const codeBox = document.getElementById("code-box");
       const verifyButton = document.getElementById("verify-btn");
+      const verifyBox = document.getElementById("verify-box");
 
       sendVerificationButton.addEventListener("click", function (event) {
-        event.preventDefault(); // 防止表單提交
-
-        // 這裡可以進行發送驗證碼的 AJAX 請求，並成功後顯示驗證碼輸入框
-        verificationCodeInput.style.display = "inline-block"; // 顯示驗證碼輸入框
-        verifyButton.style.display = "inline-block"; // 顯示驗證按鈕
+        event.preventDefault();
+        codeBox.style.display = "block";
+        verifyBox.style.display = "flex";
       });
 
-      // 驗證碼驗證邏輯
       verifyButton.addEventListener("click", function (event) {
         event.preventDefault();
-
-        // 假設驗證碼輸入成功後，顯示新密碼設置表單
         const enteredCode = verificationCodeInput.value;
 
-        // 可以在這裡加上實際的驗證碼檢查邏輯
         if (enteredCode === "123456") {
-          // 假設 "123456" 是發送的驗證碼
-          // 步驟2：創建新的 div 並顯示
           const step2Div = document.createElement("div");
-          step2Div.className = "form"; // 設定與第一步相同的類別
-
-          // 創建新密碼輸入表單
+          step2Div.className = "login-form";
+          step2Div.style.marginTop = "10px";
           step2Div.innerHTML = `
             <form action="/reset-password" method="POST">
-              <input type="password" name="newPassword" placeholder="設置新密碼 Set new password" required /><br />
-              <input type="password" name="confirmPassword" placeholder="確認新密碼 Confirm new password" required /><br />
-              <button type="submit">設置新密碼 Set New Password</button>
+              <div class="input-box">
+                <label for="newPassword">設置新密碼 Set new password</label>
+                <input type="password" name="newPassword" required />
+              </div>
+              <div class="input-box">
+                <label for="confirmPassword">確認新密碼 Confirm new password</label>
+                <input type="password" name="confirmPassword" required />
+              </div>
+              <div class="submit-box">
+                <button type="submit">設置新密碼 Set New Password</button>
+              </div>
             </form>
           `;
-
-          // 把新的 div 添加到頁面
-          document.body.appendChild(step2Div); // 可將其放到特定位置
-
-          // 隱藏步驟1
-          document.getElementById("step-1").style.display = "none";
+          document.querySelector(".login-wrapper").appendChild(step2Div);
         } else {
-          alert("驗證碼錯誤，請重新輸入。");
+          alert("驗證碼錯誤 Incorrect verification code.");
         }
       });
     </script>
