organize files into js and css folder

--- a/localapplication.html
+++ b/localapplication.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>本地申請 - 草率季Taipei Art Book Fair</title>
     <link rel="shortcut icon" href="image/icon-1.ico" />
-    <link rel="stylesheet" href="opencall.css" />
-    <link rel="stylesheet" href="font.css" />
+    <link rel="stylesheet" href="css/opencall.css" />
+    <link rel="stylesheet" href="css/font.css" />
     <!-- jquery這裡 -->
     <script src="jquery-ui-1.14.1/external/jquery/jquery.js"></script>
     <link
@@ -14,7 +14,7 @@
       href="jquery-ui-1.14.1/themes/smoothness/jquery-ui.css"
     />
     <script src="jquery-ui-1.14.1/jquery-ui.js"></script>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
     <!-- 圖靈測驗 -->
     <script
       src="https://www.google.com/recaptcha/api.js?hl=zh-TW"
@@ -832,11 +832,11 @@
       </div>
     </form>
 
-    <script src="upload.js"></script>
-    <script src="identity2.js"></script>
-    <!-- <script src="jump.js"></script> -->
-    <script src="yes.js"></script>
-    <script src="password.js"></script>
+    <script src="js/upload.js"></script>
+    <script src="js/identity2.js"></script>
+    <!-- <script src="js/jump.js"></script> -->
+    <script src="js/yes.js"></script>
+    <script src="js/password.js"></script>
     <!-- <script src="hide.js"></script> -->
   </body>
 </html>
