--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
 
     <title>Login - 草率季Taipei Art Book Fair</title>
     <!-- <link rel="stylesheet" href="style.css" /> -->
-    <link rel="stylesheet" href="font.css" />
+    <link rel="stylesheet" href="css/font.css" />
     <link rel="shortcut icon" href="image/icon-1.ico" />
     <!-- jquery這裡 -->
     <script src="jquery-ui-1.14.1/external/jquery/jquery.js"></script>
