--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oversea Application - 草率季Taipei Art Book Fair</title>
     <link rel="shortcut icon" href="image/icon-1.ico" />
-    <link rel="stylesheet" href="opencall.css" />
-    <link rel="stylesheet" href="font.css" />
+    <link rel="stylesheet" href="css/opencall.css" />
+    <link rel="stylesheet" href="css.font.css" />
     <!-- jquery這裡 -->
     <script src="jquery-ui-1.14.1/external/jquery/jquery.js"></script>
     <link
@@ -1068,10 +1068,10 @@
       </div>
     </form>
 
-    <script src="uploadoversea.js"></script>
-    <script src="identity.js"></script>
-    <script src="yes.js"></script>
-    <script src="password.js"></script>
+    <script src="js/uploadoversea.js"></script>
+    <script src="js/identity.js"></script>
+    <script src="js/yes.js"></script>
+    <script src="js/password.js"></script>
 
     <!-- <script src="hide.js"></script> -->
   </body>
