--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ font in use: Poppins, PicNic, and Inclusive Sans -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>草率季Taipei Art Book Fair</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="font.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/font.css" />
     <link rel="shortcut icon" href="image/icon-1.ico" />
     <!-- jquery這裡 -->
     <script src="jquery-ui-1.14.1/external/jquery/jquery.js"></script>
@@ -448,7 +448,7 @@ font in use: Poppins, PicNic, and Inclusive Sans -->
       </div>
     </div>
 
-    <script src="infolog.js"></script>
-    <script src="script.js"></script>
+    <script src="js/infolog.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
