font was not connected

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- force rebuild -->
 <!-- This website's front-end is designed and rushly coded by Nai-Syuan Ye(cherrythehuman).
-Po-Chen Yeh and Bo-yu Yeh are the back-end developer and the assistance. This serves merely as a buffering site before the true 2025 TPABF site is up.
+Po-Chen Yeh and Po-yu Yeh are the back-end developer and the assistance. This serves merely as a buffering site before the true 2025 TPABF site is up.
 
 Special thanks to Doğa Gönüllü and Merle Findhammer for being my eyes and providing some quirks, Yaode JN for providing me so many technical helps and of course the whole team of TPABF for giving me so much freedom<3 
 
