--- a/application-received.html
+++ b/application-received.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>申請成功 - 草率季Taipei Art Book Fair</title>
     <link rel="shortcut icon" href="image/icon-1.ico" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="font.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/font.css" />
 
     <!-- jquery這裡 -->
     <script src="jquery-ui-1.14.1/external/jquery/jquery.js"></script>
