upload description change

--- a/localapplication.html
+++ b/localapplication.html
@@ -434,9 +434,11 @@
           style="display: none"
         >
           <span class="from-header">作品上傳</span>
-          請提供已發行或預計發行之書籍相關作品。（不包含記事本、日月曆、明信片等輸出物），如提供之內容未達到錄取書攤類之標準，主辦單位將視情況條件式錄取其他攤種。
-          <br /><br />
-          從事藝術書刊創作者將作為入選優先條件審核，主辦單位將依照您所提交的內容供主辦單位審核。同時歡迎創作者依每屆主題發想創作及佈置攤位，這也將此納入攤位審核及草率獎參考。
+          <span id="port-description">
+            報名「一般書攤」之單位，請提供已發行或預計發行之書籍相關作品。（不包含記事本、日月曆、明信片等輸出物），如提供之內容未達到錄取書攤類之標準，主辦單位將視情況條件式錄取其他攤種。
+            從事藝術書刊創作者將作為入選優先條件審核，主辦單位將依照您所提交的內容供主辦單位審核。<br /><br />
+            同時歡迎創作者依每屆主題發想創作及佈置攤位，這也將此納入攤位審核及草率獎參考。
+          </span>
         </div>
         <div
           class="column layout-form-column-grid-1 question-ProductLinks"
