--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -1059,6 +1059,10 @@
             data-expired-callback="onRecaptchaExpired"
             data-error-callback="onRecaptchaError"
           ></div>
+          <div
+            id="form-error"
+            style="display: none; color: plum; margin-top: 1em"
+          ></div>
           <button
             type="submit"
             class="button-from-submit"
