--- a/overseaapplication.html
+++ b/overseaapplication.html
@@ -6,7 +6,7 @@
     <title>Oversea Application - 草率季Taipei Art Book Fair</title>
     <link rel="shortcut icon" href="image/icon-1.ico" />
     <link rel="stylesheet" href="css/opencall.css" />
-    <link rel="stylesheet" href="css.font.css" />
+    <link rel="stylesheet" href="css/font.css" />
     <!-- jquery這裡 -->
     <script src="jquery-ui-1.14.1/external/jquery/jquery.js"></script>
     <link
