sub-cat people's QQ question

--- a/localapplication.html
+++ b/localapplication.html
@@ -388,10 +388,12 @@
         <!-- 作品類別 -->
         <div class="column" id="workcat">
           <span class="from-header">作品類別</span>
-          輸入內容將公開顯示於官網目錄及標籤上。
+          <span style="color: red"></span>輸入內容將公開顯示於官網目錄及標籤上。
         </div>
         <div class="column layout-form-column-grid-1" id="workcat2">
-          <span class="from-description-header-ness">必填問題</span><br />
+          <span class="from-description-header-ness"
+            >必填問題，請先選擇攤種。</span
+          ><br />
           <select
             id="sub-category"
             class="form-input"
