Add login functionality with form validation and API integration

--- a/login.html
+++ b/login.html
@@ -246,5 +246,6 @@
       </form>
     </div>
     <a href="index-logingtryout.html"><div class="back">回主頁 Back</div></a>
+    <script src="js/login.js"></script>
   </body>
 </html>
