--- a/login.html
+++ b/login.html
@@ -246,6 +246,7 @@
       </form>
     </div>
     <a href="index-logingtryout.html"><div class="back">回主頁 Back</div></a>
+    <script src="js/cookie.js"></script>
     <script src="js/login.js"></script>
   </body>
 </html>
