style and function check

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ Special thanks to Doğa Gönüllü and Merle Findhammer for being my eyes and pr
 www.naisyuanye.com
 https://github.com/taipeiartbookfair-doublegrass/taipeiartbookfair.github.io 
 
-font in use: Poppins, PicNic, and Inclusive Sans -->
+font in use: Poppins, PicNic, and Inclusive Sans 
+-->
 
 <!DOCTYPE html>
 <html lang="en">
