--- a/localapplication.html
+++ b/localapplication.html
@@ -391,17 +391,15 @@
           <span style="color: red"></span>輸入內容將公開顯示於官網目錄及標籤上。
         </div>
         <div class="column layout-form-column-grid-1" id="workcat2">
-          <span class="from-description-header-ness"
-            >必填問題，請先選擇攤種。</span
-          ><br />
+          <span class="from-description-header-ness">必填問題</span><br />
           <select
             id="sub-category"
-            class="form-input"
             name="entry.1482635628"
             required
+            disabled
             style="color: grey; max-width: 65%"
           >
-            <option value="" disabled selected hidden>請選擇作品類別</option>
+            <option value="" disabled selected hidden>請先選擇攤種</option>
           </select>
         </div>
 
