--- a/localapplication.html
+++ b/localapplication.html
@@ -391,7 +391,9 @@
           <span style="color: red"></span>輸入內容將公開顯示於官網目錄及標籤上。
         </div>
         <div class="column layout-form-column-grid-1" id="workcat2">
-          <span class="from-description-header-ness">必填問題</span><br />
+          <span class="from-description-header-ness" style="display: block"
+            >必填問題</span
+          >
           <select
             id="sub-category"
             name="entry.1482635628"
